@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - remove Test::Strict (doesn't seem to like windows)
 
 0.1       2012-08-11 13:14:39 America/New_York
-- initial version
+  - initial version
